sfdc-src/objects/Lead_Entity__c.object
<CustomObject>
    <fields>
        <fullName>Accuracy__c</fullName>
        <label>Accuracy</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Lead Entities</relationshipLabel>
        <relationshipName>Lead_Entities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Text__c</fullName>
        <label>Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>n/a</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Lead Entity</label>
    <nameField>
        <label>Lead Entities Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lead Entities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>